Fix css issues with evaluation form
re #24133

* The label/legend for the goals & results were not aligned correctly
* The delete link for a goal was within the textarea in firefox
* Added [?] superscripts to the criteria areas help links

--- a/docroot/css/evals.css
+++ b/docroot/css/evals.css
@@ -86,8 +86,8 @@
 .appraisal-criteria fieldset fieldset legend {
     float: left;
     position: relative;
-    padding: 0;
-    margin-left: -1em;
+    padding: 0 !important;
+    margin-left: -1em !important;
 }
 
 .appraisal-criteria fieldset fieldset legend span {
